--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -2,8 +2,7 @@ name: Send Daily Reminders
 
 on:
   schedule:
-    - cron: '*/1 * * * *'  # every 5 minutes
-
+    - cron: '0 13 * * *'  # Every day at 8 AM EST (13:00 UTC)
   workflow_dispatch:
 
 jobs:
