--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -2,8 +2,7 @@ name: Send Daily Reminders
 
 on:
   schedule:
-     - cron: '*/1 * * * *'  # every 1 minute (for testing)
-  # Every day at 8 AM EST (13:00 UTC)
+    - cron: '0 13 * * *'  # 8 AM EST = 13:00 UTC
   workflow_dispatch:
 
 jobs:
