--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -2,7 +2,7 @@ name: Send Daily Reminders
 
 on:
   schedule:
-    - cron: '0 13 * * *'  # 8 AM EST = 13:00 UTC
+    - cron: '*/1 * * * *'  # Every 1 minute for testing
   workflow_dispatch:
 
 jobs:
