--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -2,12 +2,13 @@ name: Send Daily Reminders
 
 on:
   schedule:
-    - cron: '*/1 * * * *'  # Every 1 minute for testing
-  workflow_dispatch:
+    - cron: '0 13 * * *'  # Runs daily at 8:00 AM Lima time (UTC-5)
+  workflow_dispatch:      # Allows manual triggering from GitHub UI
 
 jobs:
   send_reminders:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -20,7 +21,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas sendgrid
+          pip install pandas sendgrid requests
 
       - name: Run reminder script
+        env:
+          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
         run: python send_due_reminders.py
