--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -2,13 +2,12 @@ name: Send Daily Reminders
 
 on:
   schedule:
-    - cron: '0 14 * * *'  # Runs daily at 8:00 AM Lima time (UTC-5)
-  workflow_dispatch:      # Allows manual triggering from GitHub UI
+    - cron: '5 14 * * *'  # 9:05 AM Lima time (UTC-5 = 14:05 UTC)
+  workflow_dispatch:
 
 jobs:
   send_reminders:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,9 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas sendgrid requests
+          pip install pandas sendgrid
 
       - name: Run reminder script
-        env:
-          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
         run: python send_due_reminders.py
