--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -2,7 +2,7 @@ name: Send Daily Reminders
 
 on:
   schedule:
-    - cron: '5 14 * * *'  # 9:05 AM Lima time (UTC-5 = 14:05 UTC)
+    - cron: '0 13 * * *'  # 8:00 AM Lima time = 13:00 UTC
   workflow_dispatch:
 
 jobs:
